--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+# title: Chirpy # the main title
+title: Kalyan Narayana # the main title
 
 tagline: A text-focused Jekyll theme # it will display as the subtitle
 
@@ -26,7 +27,8 @@ description: >- # used by seo meta and the atom feed
 url: ""
 
 github:
-  username: github_username # change to your GitHub username
+  username: kalyancn4u # change to your GitHub username
+  # username: github_username # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
@@ -39,10 +41,12 @@ social:
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    # - https://github.com/username # change to your GitHub homepage
+    - https://github.com/kalyancn4u # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/kalyancn
 
 # Site Verification Settings
 webmaster_verifications:
