--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,9 @@ timezone:
 # title: Chirpy # the main title
 title: Kalyan Narayana # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+# tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: A Chirpy-based personal website built for projects, portfolios, and data-driven stories.
+
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
