--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ timezone:
 title: Kalyan Narayana # the main title
 
 # tagline: A text-focused Jekyll theme # it will display as the subtitle
-tagline: A Chirpy-based personal website built for projects, portfolios, and data-driven stories.
+tagline: A Chirpy space for sharing portfolio, insights & notes.
 
 
 description: >- # used by seo meta and the atom feed
