--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ timezone:
 title: Kalyan Narayana # the main title
 
 # tagline: A text-focused Jekyll theme # it will display as the subtitle
-tagline: A Chirpy space for sharing portfolio, insights & notes.
-
+# tagline: A Chirpy space for sharing portfolio, insights & notes.
+tagline: A Chirpy space featuring portfolio, insights & notes
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
