--- a/_config.yml
+++ b/_config.yml
@@ -235,3 +235,7 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+# Custom stylesheet inclusion
+custom_css:
+  - /assets/css/tag-cloud.css
