--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ cdn:
 
 # the avatar on sidebar, support local or CORS resources
 # avatar:
-avatar: /assets/img/avatar/profile.png
+avatar: /assets/img/avatar/profile.webp
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
